--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-Read
+Aws: http://parklybe.us-east-1.elasticbeanstalk.com/ 
+To log in use post method with login and password and following link http://parklybe.us-east-1.elasticbeanstalk.com/admin
