--- a/Readme
+++ b/Readme
@@ -1,11 +1,34 @@
-Backend part of Parkly.
+# PARKING ADMINISTRATION BACKEND
+Backend part of the project for parking administration tools.
 
-Links to other parts of the project.
+## Technologies
+IntelliJ IDEA was used as IDE.
+### Backend
+Backend is created with:  
+* Java 8
+* Spring Boot
+* Hibernate  
+* Maven  
+  
+As database PostgreSQL is used.  
+JWT authentication and roles are used for security.  
+It was deployed to AWS Elastic Beanstalk. 
+### Frontend
+Fronted is implemeted with:
+* React
+* Redux
+* CSS
+### Mobile app
+Mobile application is created with:
+* React Native
+* Redux
+
+## Links to other parts of the project 
 Mockup / prototype:
 https://drive.google.com/open?id=1Ul_l3UwphIPDuzanX9YDXuHYFnQKlGWs
 
 Web app url:
-https://parklyisthebest.netlify.com/login
+https://pensive-pasteur-dd818c.netlify.app/welcome
 
 Mobile (url to mobile app published on Expo):
 https://expo.io/@denisgucj/expo-template-bare
@@ -15,7 +38,3 @@ https://github.com/elif-pw/parkly
 
 Mobile Code url:
 https://github.com/DenisGUCJ/Parkly-React-Native-
-
-Necessary working credentails for mobile and web
-login: Brutal
-pass: Denizzz
